2010-May-10 Dave Glowacki

	* System.cpp, make some changes to get correct behavior when RateCoefficientsOnly is specified
      * IrreversibleExchangeReaction.cpp & IrreversibleUnimolecularReaction.cpp: make changes for 
        correct behavior in the case of a negative barrier
      * MesmerTools.cpp, make changes to avoid numerical errors for QMrotor routines
      * LandauZenerCrossingCoeff.cpp, WKBCrossingCoeff.cpp, SimpleRRKM.cpp: changes to give correction
        behavior in the case that RRKM Crossing Coefficients are requested for reactions with a negative
        barrier
      * add HCCH_methylene.xml & HCCH_methylene.test in MesmerQA\spin_forbidden_kinetics

2010-April-25 Struan Robertson

	* System.h/.cpp, TMatrix.h: Addition of Gram-Schmidt analysis to Bartis-Widom calculation,
      to improve mass conservation.
      * Update of associated baselines.

2010-April-18 Struan Robertson

	* System.h/.cpp: Refactoring of the Bartis-Widom method.

2010-April-12 Struan Robertson

	* System.h/.cpp: Minor change to Bartis-Widom method.

2010-April101 Chris Morley

	* mesmer1.xsl: add facility to copy punchfile-like data from Firefox output
	
	* punchout.bat: script to use punch.xsl to make punch file, usable from
	SendTo menu.

2010-March-26 Chi-Hsiu Liang

  * Set up project to debug under Apple Xcode. Some incompitabilities were removed.

2010-March-20 Struan Robertson

	* SimpleILT.h/.cpp, MesmerILT.h/.cpp: More refactoring to eliminate code duplication.

2010-March-20 Struan Robertson

	* ReactionManager.h/.cpp, System.h/.cpp: Transition matrix construction moved from 
      ReactionManager to System.

2010-March-14 Chris Morley

	* src/vector3.cpp,src/vector3.h: class foratom coordinates from OpenBabel,
	with new function Point2Line.
	
	* src/MolecularComponents.cpp,src/MolecularComponents.h,src/unitsConversion.cpp,
	src/unitsConversion.h: Store and read chemical structure, with some functions to
	retrieve info.
	